<resources>
    <string name="app_name">General Staff</string>
    <string name="googlePlaceKey_live" translatable="false">AIzaSyBcPi5Jh_GQagOqp0DFYPi7s9EaewXVA0I</string>
    <string name="permission">Please provide permission</string>
    <string name="grant">GRANT</string>
    <string name="get_started">Get Started</string>
    <string name="lorem">Lorem Ipsum is simply dummy text\nof the printing and typesetting industry.</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="referral_code_optional">Referral Code (optional)</string>
    <string name="submit">Submit</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_referral">Enter Referral</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="next">Next</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="choose_language">Choose Language</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select_source">Select Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="Canceled">Canceled</string>
    <string name="openSettings">Open setting</string>
    <string name="alert">Alert</string>
    <string name="permissionRequired">Permission Required</string>
    <string name="skip">Skip</string>
    <string name="ok">Ok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="order_history">Order History</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="edit_details">Edit Details</string>
    <string name="update">Update</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="lorem2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="dilpreet_delivered_your_order">Dilpreet Delivered Your order</string>
    <string name="track_now">Track Now</string>
    <string name="notifications">Notifications</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="messages">messages</string>
    <string name="messages_">Messages</string>
    <string name="_10_chats">10 Chats</string>
    <string name="current_orders">Current orders</string>
    <string name="my_current_orders">My current orders</string>
    <string name="favourites">Favourites</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to\n Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="plate_number">Plate Number</string>
    <string name="license_upload">License Upload</string>
    <string name="email_address">Email Address</string>
    <string name="filter">Filter</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="ok2">Ok</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_notifications_found_yet">No notifications found yet!</string>
    <string name="no_orders_found">No orders found!</string>
    <string name="no_data_found">No data found!</string>
    <string name="something_went_wrong_while_getting_directions">Something went wrong while getting directions , please try again later!</string>
    <string name="please_enter_phone_number">Please enter your phone number.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number. Phone number should be greater than 7.</string>
    <string name="enter_plate_number">Enter Plate number</string>
    <string name="no_new_request_found">No request yet!</string>
    <string name="no_new_requests_found">No requests yet!</string>
    <string name="recently_orders">Recently Orders</string>
    <string name="no_chats_yet">No chats yet!</string>
    <string name="no_notifications_yet">No notifications yet!</string>
    <string name="contact_options">Contact Options</string>
    <string name="restaurants">Restaurants</string>
    <string name="orders">Orders</string>
    <string name="shops">Shops</string>
    <string name="add_shop">Add Shop</string>
    <string name="enter_shop">Enter Shop</string>
    <string name="enter_description">Enter Description</string>
    <string name="add_order">Add Order</string>
    <string name="driver">Driver</string>
    <string name="shop">Shop</string>
    <string name="product">Product</string>
    <string name="driver_fees">Driver Fees</string>
    <string name="detail">Detail</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_more">Add More</string>
    <string name="add_image">Add Image</string>
    <string name="password">Password</string>
    <string name="enter_location">Enter Location</string>
    <string name="order_warning">This client has orders in progress. Are you sure you want to launch another order?</string>
    <string name="cancel_order"><u>Cancel Order</u></string>
    <string name="are_you_sure_you_want_to_cancel_this_order">Are you sure you want to cancel this order?</string>
    <string name="contact_driver"><u>Contact Driver</u></string>
    <string name="phone_call">Phone Call</string>
    <string name="message">Message</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="driver_type">Driver Type</string>
    <string name="contact_shop">Contact Shop</string>
    <string name="contact_user_">Contact User</string>
    <string name="select_driver_type">Select Driver Type</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="driver_accepted">Driver Accepted</string>
    <string name="picked">Picked</string>
    <string name="driver_picked">Driver Picked</string>
    <string name="on_route">On route</string>
    <string name="delivered">Delivered</string>
    <string name="activa">Activa</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="please_select_vehicle_type">Please select Vehicle Type</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_upload_license">Please upload License</string>
    <string name="otp_send_successfully_please_enter_1111_as_otp">OTP send successfully. Please enter 1111 as OTP</string>
    <string name="fastest">Fastest</string>
    <string name="delivery">Delivery</string>
    <string name="get_your_order">Get Your Order</string>
    <string name="online">Online</string>
    <string name="welcome">"Welcome "</string>
    <string name="bicycle">Bicycle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="human">Human</string>
    <string name="done">Done</string>
    <string name="no_products_available_for_this_shop">No products available for this shop!</string>
    <string name="please_select_driver_type">Please select driver type!</string>
    <string name="please_enter_driver_fee">Please enter driver fee!</string>
    <string name="please_enter_location">Please enter location!</string>
    <string name="no_driver_type_found_for_this_order">No driver type found for this order!</string>
    <string name="please_select_shop_category">Please select shop category</string>
    <string name="please_enter_shop_name">Please enter shop name</string>
    <string name="please_select_open_time">Please select open time</string>
    <string name="please_select_close_time">Please select close time</string>
    <string name="please_enter_shop_location">Please enter shop location</string>
    <string name="please_enter_shop_description">Please enter shop description</string>
    <string name="please_select_shop_image">Please select shop image</string>
    <string name="select_category">Select Category</string>
    <string name="edit_shop">Edit Shop</string>
    <string name="please_enter_something">"Please enter something! "</string>
    <string name="edit_product">Edit Product</string>
    <string name="you_can_not_add_more_then_5_images">You can not add more then 5 images</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_select_at_least_one_image">Please select at least one image</string>
    <string name="chats">%1$s Chats</string>
    <string name="enter_fee">Enter Fee</string>
    <string name="location">Location</string>
    <string name="no_chat_yet">No chat yet!</string>
    <string name="type_here">Type here ……</string>
    <string name="search">Search....</string>
    <string name="we_have_sent_the_code_verification_nto_your_phone_number">We have sent the code verification \nto your Phone Number</string>
    <string name="no_product_found">No product found!</string>
    <string name="navigate">Navigate</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="go_to_pickup">Go to Pickup</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="get_ready_for_today">Get Ready for Today ?</string>
    <string name="total_orders">Total Orders</string>
    <string name="view_all">View all</string>
    <string name="hello_how_are_you">Hello how are you ?</string>
    <string name="great">Great!!</string>
    <string name="oops">Oops</string>
    <string name="you_need_to_allow_access_to_nlocation_in_order_to_use_app_nplease_try_again_and_hit_below_button">You need to allow access to\nlocation in order to use app.\nPlease try again and hit below button.</string>
</resources>