<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:background="@color/transDark60">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/bg_rounded_20"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contact_options"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/phone_call"
            android:textColor="@color/ios_blue"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/ios_blue"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWhatsApp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/whatsapp"
            android:textColor="@color/ios_blue"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/ios_red"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</RelativeLayout>