<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AddDrivingDetailsActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_23sdp"
        android:layout_margin="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_7sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/vehicle_information"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textColor="@color/grey_textcolor"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>

        <RelativeLayout
            android:id="@+id/rlDropDown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/rectangle_fields_round">
            <Spinner
                android:id="@+id/vehicleSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate_number"
            android:textColor="@color/grey_textcolor"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/rectangle_fields_round">

            <EditText
                android:id="@+id/edNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Transparent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:hint="@string/enter_plate_number"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_upload"
            android:textColor="@color/grey_textcolor"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"/>


        <RelativeLayout
            android:id="@+id/rlPick"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="@dimen/_160sdp"
            >
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/rivLicense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:riv_corner_radius="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/place_holder"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/dummy_driving"/>

            <ImageView
                android:id="@+id/ivPick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_camera" />


        </RelativeLayout>



    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/app_theme_color"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/llData"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>